--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
 	  <version>5.1.9.RELEASE</version>
 	  <type>jar</type>
 	 </dependency>
+         
+    <dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.0</version>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
